Fixed formatting for anchor tags on index file

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <header class="header-container">
-        <section class="header-left">
-            <a href="#"><h1>Brandon Wing</h1></a>
-        </section>
+        <a href="https://github.com/Bwing2/professional-portfolio-challenge-2">
+            <section class="header-left">
+                <h1>Brandon Wing</h1>
+            </section>
+        </a>
         <nav class="header-right">
             <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="#">Resume</a></li>
+                <a href="#about-me"><li>About Me</li></a>
+                <a href="#work"><li>Work</li></a>
+                <a href="#contact-me"><li>Contact Me</li></a>
+                <a href="#"><li id="header-bottom">Resume</li></a>
             </ul>
         </nav>
     </header>
@@ -72,7 +74,7 @@
                 </a>
             </figure>
             <figure id="project-4" class="small-grid-styling">
-                <a href="#"><img src="./images/data-repository.png" alt="zeros and ones making up all the continents" class="image-transition">
+                <a href="#"><img src="./images/data-repository.png" alt="zeros and ones making up all the continents">
                     <div class="caption">
                         <h3>Coming Soon</h3>
                         <h3>--</h3>
@@ -85,10 +87,10 @@
         </section>
         <nav class="contact-me-info">
             <ul>
-                <li><a href="tel:7202508310">720-250-8310</a></li>
-                <li><a href="mailto:brandon.wing245@gmail.com">Email</a></li>
-                <li><a href="https://github.com/Bwing2">GitHub</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                <a href="tel:7202508310"><li>720-250-8310</li></a>
+                <a href="mailto:brandon.wing245@gmail.com"><li>Email</li></a>
+                <a href="https://github.com/Bwing2"><li>GitHub</li></a>
+                <a href="https://www.linkedin.com"><li>LinkedIn</li></a>
             </ul>
         </nav>
     </main>
