Added README images and profile picture/border

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>About Me</h1>
         </section>
         <section id="about-me-info" class="paragraph-container">
-            <img class="profile-picture" src="./images/blank-profile-picture.png" alt="profile picture of me"/>
+            <img class="profile-picture" src="./images/profile_pic.png" alt="profile picture of me"/>
             <div id="background-paragraph" class="paragraph">
                 <h2>Hello my name is Brandon Wing! I graduated with a bachelors degree in Business Administration last year. I have 2+ years of software testing experience, and want to learn more about the entire process that goes into software engineering. I recently started a coding bootcamp in August that focuses on full stack web development. I like the problem solving aspects, and find the challenge makes it more enjoyable.</h2>
             </div>
