--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Brandon Wing Professional Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
             <h1>About Me</h1>
         </section>
         <section id="about-me-info" class="paragraph-container">
-            <img class="profile-picture" src="./images/profile_pic.png" alt="profile picture of me"/>
+            <img class="profile-picture" src="./assets/images/profile_pic.png" alt="profile picture of me"/>
             <div id="background-paragraph" class="paragraph">
                 <h2>Hello my name is Brandon Wing! I graduated with a bachelors degree in Business Administration last year. I have 2+ years of software testing experience, and want to learn more about the entire process that goes into software engineering. I recently started a coding bootcamp in August that focuses on full stack web development. I like the problem solving aspects, and find the challenge makes it more enjoyable.</h2>
             </div>
@@ -42,7 +42,7 @@
         </section>
         <section class="projects">
             <figure class="project-showcase">
-                <a href="https://github.com/Bwing2/horiseon-marketing-agency-refactor-challenge-1"><img src="./images/code-refactoring.png" alt="code refactoring clip art">
+                <a href="https://github.com/Bwing2/horiseon-marketing-agency-refactor-challenge-1"><img src="./assets/images/code-refactoring.png" alt="code refactoring clip art">
                     <div class="caption">
                         <h3>Refactoring Challenge 1</h3>
                         <h3>HTML/CSS</h3>
@@ -50,7 +50,7 @@
                 </a>
             </figure>
             <figure id="project-1" class="small-grid-styling">
-                <a href="https://github.com/Bwing2/prework-study-guide"><img src="./images/study-guide.jpeg" alt="person studying clip art">
+                <a href="https://github.com/Bwing2/prework-study-guide"><img src="./assets/images/study-guide.jpeg" alt="person studying clip art">
                     <div class="caption">
                         <h3>Prework Study Guide</h3>
                         <h3>HTML/CSS/JS</h3>
@@ -58,7 +58,7 @@
                 </a>
             </figure>
             <figure id="project-2" class="small-grid-styling">
-                <a href="#"><img src="./images/data-repository.png" alt="zeros and ones making up all the continents">
+                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
                     <div class="caption">
                         <h3>Coming Soon</h3>
                         <h3>--</h3>
@@ -66,7 +66,7 @@
                 </a>
             </figure>
             <figure id="project-3" class="small-grid-styling">
-                <a href="#"><img src="./images/data-repository.png" alt="zeros and ones making up all the continents">
+                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
                     <div class="caption">
                         <h3>Coming Soon</h3>
                         <h3>--</h3>
@@ -74,7 +74,7 @@
                 </a>
             </figure>
             <figure id="project-4" class="small-grid-styling">
-                <a href="#"><img src="./images/data-repository.png" alt="zeros and ones making up all the continents">
+                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
                     <div class="caption">
                         <h3>Coming Soon</h3>
                         <h3>--</h3>
