Added recent projects to work section

--- a/index.html
+++ b/index.html
@@ -1,98 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Brandon Wing Professional Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header-container">
-        <a href="https://github.com/Bwing2/professional-portfolio-challenge-2">
-            <section class="header-left">
-                <h1>Brandon Wing</h1>
-            </section>
-        </a>
-        <nav class="header-right">
-            <ul>
-                <a href="#about-me"><li>About Me</li></a>
-                <a href="#work"><li>Work</li></a>
-                <a href="#contact-me"><li>Contact Me</li></a>
-                <a href="#"><li id="header-bottom">Resume</li></a>
-            </ul>
-        </nav>
+      <a href="https://github.com/Bwing2/professional-portfolio-challenge-2">
+        <section class="header-left">
+          <h1>Brandon Wing</h1>
+        </section>
+      </a>
+      <nav class="header-right">
+        <ul>
+          <a href="#about-me"><li>About Me</li></a>
+          <a href="#work"><li>Work</li></a>
+          <a href="#contact-me"><li>Contact Me</li></a>
+          <a href="#"><li id="header-bottom">Resume</li></a>
+        </ul>
+      </nav>
     </header>
-    <section class="hero">
-    </section>
+    <section class="hero"></section>
     <main class="main-container">
-        <section id="about-me" class="titles">
-            <h1>About Me</h1>
-        </section>
-        <section id="about-me-info" class="paragraph-container">
-            <img class="profile-picture" src="./assets/images/profile_pic.png" alt="profile picture of me"/>
-            <div id="background-paragraph" class="paragraph">
-                <h2>Hello my name is Brandon Wing! I graduated with a bachelors degree in Business Administration last year. I have 2+ years of software testing experience, and want to learn more about the entire process that goes into software engineering. I recently started a coding bootcamp in August that focuses on full stack web development. I like the problem solving aspects, and find the challenge makes it more enjoyable.</h2>
+      <section id="about-me" class="titles">
+        <h1>About Me</h1>
+      </section>
+      <section id="about-me-info" class="paragraph-container">
+        <img
+          class="profile-picture"
+          src="./assets/images/profile_pic.png"
+          alt="profile picture of me"
+        />
+        <div id="background-paragraph" class="paragraph">
+          <h2>
+            Hello my name is Brandon Wing! I graduated with a bachelors degree
+            in Business Administration last year. I have 2+ years of software
+            testing experience, and want to learn more about the entire process
+            that goes into software engineering. I recently started a coding
+            bootcamp in August that focuses on full stack web development. I
+            like the problem solving aspects, and find the challenge makes it
+            more enjoyable.
+          </h2>
+        </div>
+        <div id="skills-paragraph" class="paragraph">
+          <h2>
+            In my free time I like to work on improving skills, whether it be
+            programming, video editing, rock climbing, or competitive video
+            games.
+          </h2>
+        </div>
+      </section>
+      <section id="work" class="titles">
+        <h1>Work</h1>
+      </section>
+      <section class="projects">
+        <figure class="project-showcase">
+          <a
+            href="https://github.com/SparkKids/rocket-launches-and-news-database-group-project"
+            ><img
+              src="./assets/images/rocket-launch-website.png"
+              alt="rocket launch website homepage"
+            />
+            <div class="caption">
+              <h3>Rocket Launch Info and News</h3>
+              <h3>HTML/CSS/JS</h3>
             </div>
-            <div id="skills-paragraph" class="paragraph">
-                <h2>In my free time I like to work on improving skills, whether it be programming, video editing, rock climbing, or competitive video games.</h2>
+          </a>
+        </figure>
+        <figure id="project-1" class="small-grid-styling">
+          <a
+            href="https://github.com/Bwing2/brandon-weather-dashboard-challenge-6"
+            ><img
+              src="./assets/images/weather-dashboard-website.png"
+              alt="weather dashboard website homepage"
+            />
+            <div class="caption">
+              <h3>Weather Dashboard</h3>
+              <h3>HTML/CSS/JS</h3>
             </div>
-        </section>
-        <section id="work" class="titles">
-            <h1>Work</h1>
-        </section>
-        <section class="projects">
-            <figure class="project-showcase">
-                <a href="https://github.com/Bwing2/horiseon-marketing-agency-refactor-challenge-1"><img src="./assets/images/code-refactoring.png" alt="code refactoring clip art">
-                    <div class="caption">
-                        <h3>Refactoring Challenge 1</h3>
-                        <h3>HTML/CSS</h3>
-                    </div>
-                </a>
-            </figure>
-            <figure id="project-1" class="small-grid-styling">
-                <a href="https://github.com/Bwing2/prework-study-guide"><img src="./assets/images/study-guide.jpeg" alt="person studying clip art">
-                    <div class="caption">
-                        <h3>Prework Study Guide</h3>
-                        <h3>HTML/CSS/JS</h3>
-                    </div>
-                </a>
-            </figure>
-            <figure id="project-2" class="small-grid-styling">
-                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
-                    <div class="caption">
-                        <h3>Coming Soon</h3>
-                        <h3>--</h3>
-                    </div>
-                </a>
-            </figure>
-            <figure id="project-3" class="small-grid-styling">
-                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
-                    <div class="caption">
-                        <h3>Coming Soon</h3>
-                        <h3>--</h3>
-                    </div>
-                </a>
-            </figure>
-            <figure id="project-4" class="small-grid-styling">
-                <a href="#"><img src="./assets/images/data-repository.png" alt="zeros and ones making up all the continents">
-                    <div class="caption">
-                        <h3>Coming Soon</h3>
-                        <h3>--</h3>
-                    </div>
-                </a>
-            </figure>
-        </section>
-        <section id="contact-me" class="titles">
-            <h1>Contact Me</h1>
-        </section>
-        <nav class="contact-me-info">
-            <ul>
-                <a href="tel:7202508310"><li>720-250-8310</li></a>
-                <a href="mailto:brandon.wing245@gmail.com"><li>Email</li></a>
-                <a href="https://github.com/Bwing2"><li>GitHub</li></a>
-                <a href="https://www.linkedin.com"><li>LinkedIn</li></a>
-            </ul>
-        </nav>
+          </a>
+        </figure>
+        <figure id="project-2" class="small-grid-styling">
+          <a
+            href="https://github.com/Bwing2/brandon-work-day-scheduler-challenge-5"
+            ><img
+              src="./assets/images/work-day-scheduler-website.png"
+              alt="work day scheduler website homepage"
+            />
+            <div class="caption">
+              <h3>Work Day Scheduler</h3>
+              <h3>HTML/CSS/JS</h3>
+            </div>
+          </a>
+        </figure>
+        <figure id="project-3" class="small-grid-styling">
+          <a href="https://github.com/Bwing2/brandon-web-api-quiz-challenge-4"
+            ><img
+              src="./assets/images/quiz-website.png"
+              alt="javascript api quiz website homepage"
+            />
+            <div class="caption">
+              <h3>JavaScript Web Api Quiz</h3>
+              <h3>HTML/CSS/JS</h3>
+            </div>
+          </a>
+        </figure>
+        <figure id="project-4" class="small-grid-styling">
+          <a
+            href="https://github.com/Bwing2/brandon-password-generator-challenge-3"
+            ><img
+              src="./assets/images/password-generator-website.png"
+              alt="password generator website homepage"
+            />
+            <div class="caption">
+              <h3>Password Generator</h3>
+              <h3>HTML/CSS/JS</h3>
+            </div>
+          </a>
+        </figure>
+      </section>
+      <section id="contact-me" class="titles">
+        <h1>Contact Me</h1>
+      </section>
+      <nav class="contact-me-info">
+        <ul>
+          <a href="tel:7202508310"><li>720-250-8310</li></a>
+          <a href="mailto:brandon.wing245@gmail.com"><li>Email</li></a>
+          <a href="https://github.com/Bwing2"><li>GitHub</li></a>
+          <a href="https://www.linkedin.com"><li>LinkedIn</li></a>
+        </ul>
+      </nav>
     </main>
-</body>
+  </body>
 </html>
